; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_prepare.c_DropAllPreparedStatements.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_prepare.c_DropAllPreparedStatements.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@prepared_queries = common dso_local global i32 0, align 4
@HASH_REMOVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DropAllPreparedStatements() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = load i32, i32* @prepared_queries, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  br label %23

6:                                                ; preds = %0
  %7 = load i32, i32* @prepared_queries, align 4
  %8 = call i32 @hash_seq_init(i32* %1, i32 %7)
  br label %9

9:                                                ; preds = %12, %6
  %10 = call %struct.TYPE_3__* @hash_seq_search(i32* %1)
  store %struct.TYPE_3__* %10, %struct.TYPE_3__** %2, align 8
  %11 = icmp ne %struct.TYPE_3__* %10, null
  br i1 %11, label %12, label %23

12:                                               ; preds = %9
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @DropCachedPlan(i32 %15)
  %17 = load i32, i32* @prepared_queries, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @HASH_REMOVE, align 4
  %22 = call i32 @hash_search(i32 %17, i32 %20, i32 %21, i32* null)
  br label %9

23:                                               ; preds = %5, %9
  ret void
}

declare dso_local i32 @hash_seq_init(i32*, i32) #1

declare dso_local %struct.TYPE_3__* @hash_seq_search(i32*) #1

declare dso_local i32 @DropCachedPlan(i32) #1

declare dso_local i32 @hash_search(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
